# 42-exam-02

./: 42_exam_map.drawio  CMakeLists.txt  DELIVERY_SUMMARY.md  NAVIGATION.md  OPTIMIZATION_GUIDE.md  README.md  README_COMPREHENSIVE.md  main.c
exam/: alpha_mirror.c  camel_to_snake.c  do_op.c  epur_str.c  exam.h  first_word.c  fizzbuzz.c  flood_fill.c  fprime.c  ft_add_prime_sum.c  ft_atoi.c  ft_atoi_base.c  ft_count_words.c  ft_expand_str.c  ft_first_word.c  ft_is_prime.c  ft_is_space.c  ft_is_space_bitwise.c  ft_isxdigit.c  ft_itoa.c  ft_last_word.c  ft_list_foreach.c  ft_list_remove_if.c  ft_list_size.c  ft_numlen.c  ft_putstr.c  ft_range.c  ft_rev_wstr.c  ft_rostring.c  ft_rrange.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strcspn.c  ft_strdup.c  ft_strip_twos.c  ft_strlen.c  ft_strrev.c  ft_swap.c  (+26 more)
src/: CMakeLists.txt  ft_split.c  ft_split.cpp  print_hex.cpp  repeat_alpha.cpp  reverse_bits.cpp  tests.cpp  tests.h  tests.hpp  ulstr.cpp
test/: CMakeLists.txt  main.cpp  tests_ex01.cpp
